# s2k

./: Cargo.toml  index.html
.cargo/: config.toml
.github/workflows/: build.yaml  cargo.yaml
src/: algorithm.rs  document.rs  lib.rs  main.rs  s2k.rs  web.rs  widgets.rs
src/widgets/: input.rs  output.rs  select.rs
