[package]
name = "s2k"
version = "0.1.0"
authors = ["Toru Ogawa <Hakuyume@users.noreply.github.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
base64 = "0.22.1"
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
# https://docs.rs/getrandom/0.2.15/getrandom/index.html#webassembly-support
getrandom = { version = "0.2.16", features = ["js"] }
js-sys = "0.3.77"
sha2 = "0.10.9"
strum = { version = "0.27.2", features = ["derive"] }
tokio = { version = "1.47.0", features = ["sync"] }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = [
  "Clipboard",
  "Document",
  "DomTokenList",
  "HtmlButtonElement",
  "HtmlInputElement",
  "HtmlOptionElement",
  "HtmlOptionsCollection",
  "HtmlSelectElement",
  "Navigator",
  "Storage",
  "Window",
] }

[dev-dependencies]
hex-literal = "1.0.0"
